[package]
name = "postbus"
version = "0.2.0"
edition = "2018"
description = "SMTP server for Rust"
license = "MIT"
repository = "https://github.com/nexiumapp/postbus"
categories = ["email", "parser-implementations", "network-programming"]

[dependencies]
nom = "7.0.0"
async-trait = "0.1.51"
log = "0.4.14"
tokio = { version = "1.10.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
] }

[dev-dependencies]
env_logger = "0.9.0"
mailparse = "0.13.6"
